# ai-usage-monitor

./: .eslintrc.cjs  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: architecture.md  assumptions.md  calculation-rules.md  cross-platform.md  current-status.md  domain-model.md  handoff-log.md  mvp-scope.md  notifications.md  privacy.md  product-brief.md  provider-adapters.md  roadmap.md  security.md  storage.md  testing.md
scripts/: package-universal.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_deduplicate_usage_limits.sql  0003_prune_seeded_event_preferences.sql
src-tauri/src/: diagnostics.rs  lib.rs  local_usage.rs  main.rs  secret.rs  skill_usage.rs
src/domain/: burnRate.test.ts  burnRate.ts  claudeCost.test.ts  claudeCost.ts  codexCost.test.ts  codexCost.ts  confidence.ts  constants.ts  dedup.ts  forecast.test.ts  forecast.ts  importValidation.ts  index.ts  limitNotificationPreferences.test.ts  limitNotificationPreferences.ts  notificationEvents.ts  notifications.test.ts  planRecommendation.test.ts  planRecommendation.ts  quietHours.test.ts  quietHours.ts  quotaExpiry.test.ts  quotaExpiry.ts  remainingTasks.test.ts  remainingTasks.ts  resetCredits.test.ts  resetCredits.ts  resetDetection.test.ts  resetDetection.ts  retry.ts  runway.test.ts  runway.ts  snapshotFreshness.test.ts  snapshotFreshness.ts  snapshotValidation.ts  testFixtures.ts  types.ts  usageStats.test.ts  usageStats.ts  util.ts  (+1 more)
(+46 files in other folders)
