[package]
name = "ai-usage-monitor"
version = "0.3.0"
description = "Local-first AI subscription usage monitor"
authors = ["ai-usage-monitor"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "ai_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
# apple-native + windows-native cover the two platforms in scope (macOS Keychain, Windows Credential
# Manager). Linux secret-service is intentionally omitted to avoid pulling dbus/zbus into the macOS build.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
